@@ -146,6 +146,7 @@ export(mlistMetaName)
 export(new)
 export(newBasic)
 export(newClassRepresentation)
+export(selectSuperClasses, .selectSuperClasses)
 export(newEmptyObject)
 export(packageSlot)
 export("packageSlot<-")
